--- a/index.html
+++ b/index.html
@@ -41,20 +41,23 @@
            </h1>  
            <p class="about-me__info--para">I'm a <strong class="text--purple">frontend software engineer</strong> with a strong passion for building responsive and performant web applications with great user experiences that positively impacts the world.</p> 
            <div class="about-me__links">
-             <a href="about-me__link">
+            <a href="" class="about-me__link">
               <i class="fa-brands fa-linkedin"></i>
-             </a>
-             <a href="about-me__link">
-              <i class="fa-brands fa-facebook"></i>
-             </a>
-             <a href="about-me__link">
+            </a>
+            <a href="" class="about-me__link">
               <i class="fa-brands fa-github"></i>
-             </a>
-             <a href="about-me__link">
-                <i class="fa-regular fa-envelope"></i>
-             </a>
-          </div>
+            </a>
+            <a href="" class="about-me__link">
+              <i class="fa-solid fa-envelope"></i>
+            </a>
+            <a href="" class="about-me__link">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+           </div>
         </div>
+        <figure class="about-me__img--container">
+          <img src="./assets/undraw_websites.svg" class="about-me__img" alt="">
+        </figure>
       </div>
     </div>
     </section>
