--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
       <nav>
         <div class="personal-logo">James Turner</div>
         <ul class="nav__link--list">
-          <li>
+          <li class="nav__link">
             <a
               href=""
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Languages</a
             >
           </li>
-          <li>
+          <li class="nav__link">
             <a
               href=""
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Projets</a
             >
           </li>
-          <li>
+          <li class="nav__link">
             <a href="" class="nav__link--anchor nav__link--anchor-primary"
               >Contact</a
             >
@@ -49,7 +49,7 @@
             </figure>
             <div class="span language__name"></div>
             <h1 class="about-me__info--title">
-              Hey! I'm <span class="text--purple">James Turner</span> 👋
+              Hey! I'm <span class="text--purple">James Turner</span>&nbsp;<span class="wave">👋</span> 
             </h1>
             <p class="about-me__info--para">
               I'm a
@@ -68,8 +68,8 @@
               <a href="" class="about-me__link">
                 <i class="fa-solid fa-envelope"></i>
               </a>
-              <a href="" class="about-me__link">
-                <i class="fa-brands fa-instagram"></i>
+              <a href="./assets/Example Resume.pdf" target="_blank" class="about-me__link">
+                <i class="fa-solid fa-file"></i>
               </a>
             </div>
           </div>
@@ -208,9 +208,93 @@
                 </div>
               </div>
             </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img src="./assets/loopit.png" class="project__img" alt="" />
+                <div class="project__description">
+                  <h3 class="project__description--title">Car sales project</h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Temporibus amet magnam ad facilis! Aliquid, quas itaque sed
+                    adipisci optio consequuntur.
+                  </p>
+                  <div class="project__description--link">
+                    <a href="www.github.com/mylink" target="_blank" class="project__description--link">
+                      <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="www.my/link" class="project__description--link">
+                      <i class="fa-solid fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img src="./assets/loopit.png" class="project__img" alt="" />
+                <div class="project__description">
+                  <h3 class="project__description--title">Car sales project</h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Temporibus amet magnam ad facilis! Aliquid, quas itaque sed
+                    adipisci optio consequuntur.
+                  </p>
+                  <div class="project__description--link">
+                    <a href="www.github.com/mylink" target="_blank" class="project__description--link">
+                      <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="www.my/link" class="project__description--link">
+                      <i class="fa-solid fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
           </ul>
         </div>
       </div>
     </section>
+    <footer>
+      <div class="row footer__row">
+        <a href="#" class="footer__anchor">
+          <figure class="footer__logo">
+            <img src="./assets/logo.svg" class="footer__logo--img" alt="">
+          </figure>
+          <span class="footer__logo--popper">
+            top
+           <i class="fa-solid fa-arrow-up"></i>
+          </span>
+        </a>
+        <div class="footer__social--list">
+           <a href="https://google.com" class="
+           footer__social--link
+           link__hover-effect
+           link__hover-effect--white
+           " target="_blank">Github</a>
+           <a href="https://google.com" class="
+           footer__social--link
+           link__hover-effect
+           link__hover-effect--white
+           " target="_blank">Linkedin</a>
+           <a href="mailto:jamestur@msn.com" class="
+           footer__social--link
+           link__hover-effect
+           link__hover-effect--white
+           " target="_blank">Email</a>
+           <a href="./assets/Example Resume.pdf" class="
+           footer__social--link
+           link__hover-effect
+           link__hover-effect--white
+           " target="_blank">Resume</a>
+        </div>
+        <div class="footer__copyright">Copyright © 2025 James Turner</div>
+      </div>
+    </footer>
   </body>
 </html>
